<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="firstNumber">First Number</string>
    <string name="secondNumber">Second Number</string>
    <string name="Addition">+</string>
    <string name="answer">Answer</string>
    <string name="answer1">Answer</string>
    <string name="Subraction">-</string>
    <string name="Multiplication">*</string>
    <string name="Division">/</string>
    <string name="Multiply">*</string>
    <string name="Divide">/</string>

</resources>
