<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/firstNumber"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/first"
        android:layout_marginTop="30dp"
        android:text="@string/secondNumber"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/etFirst"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/first"
        android:layout_alignBottom="@+id/first"
        android:layout_toRightOf="@+id/second"
        android:ems="10"
        android:inputType="numberDecimal" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/etSecond"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/second"
        android:layout_alignBottom="@+id/second"
        android:layout_toRightOf="@+id/second"
        android:ems="10"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/btnadd"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_alignLeft="@+id/second"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="113dp"
        android:text="@string/Addition" />

    <TextView
        android:id="@+id/answer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/second"
        android:layout_alignRight="@+id/first"
        android:layout_below="@+id/etSecond"
        android:layout_marginTop="24dp"
        android:text="@string/answer"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tvans"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/answer"
        android:layout_alignLeft="@+id/etSecond"
        android:layout_alignRight="@+id/etSecond"
        android:layout_marginLeft="16dp"
        android:text="@string/answer" />

    <Button
        android:id="@+id/btnsub"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_alignBaseline="@+id/btnadd"
        android:layout_alignBottom="@+id/btnadd"
        android:layout_toRightOf="@+id/btnadd"
        android:text="@string/Subraction" />

    <Button
        android:id="@+id/btnmul"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_alignLeft="@+id/btnadd"
        android:layout_below="@+id/btnsub"
        android:layout_marginTop="24dp"
        android:text="@string/Multiply" />

    <Button
        android:id="@+id/btndiv"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_alignBottom="@+id/btnmul"
        android:layout_toRightOf="@+id/answer"
        android:text="@string/Divide" />

</RelativeLayout>